The javadoc jar documents under the compile's module graph — the module's --add-modules, --add-exports and --add-reads ride along, and an export of a system module sets javadoc's level with -source as the compile's JavacLevel does — so hadoop-annotations' javadoc reaches jdk.javadoc.internal.tool cleanly instead of leniently